// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bfs do not ignore namedGraphs 1`] = `
Array [
  Object {
    "id": "34",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Note",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "35",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "36",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "WhiteRabbit",
            },
          },
          Object {
            "id": "37",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
              },
              "language": "es",
              "termType": "Literal",
              "value": "Conejo blanco",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Object {
            "id": "38",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/WhiteRabbit.md",
                },
              ],
              "types": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/Block",
                },
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/Rabbit",
                },
              ],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Object {
                    "id": "39",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                  Object {
                    "id": "40",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/Rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "41",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Object {
                    "id": "42",
                    "isInternalLink": true,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Object {
                    "id": "43",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/contains",
                },
                "values": Array [
                  Object {
                    "id": "44",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Object {
                            "id": "47",
                            "isInternalLink": true,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Block",
                            },
                          },
                          Object {
                            "id": "48",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://schema.org/Place",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Object {
                            "id": "49",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/selector",
                        },
                        "values": Array [
                          Object {
                            "id": "50",
                            "isInternalLink": true,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/postalCode",
                        },
                        "values": Array [
                          Object {
                            "id": "51",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "4879",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/streetAddress",
                        },
                        "values": Array [
                          Object {
                            "id": "52",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "5 Wonderland Street",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b1_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/address",
                },
                "values": Array [
                  Object {
                    "id": "45",
                    "isInternalLink": true,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b1_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
                },
                "values": Array [
                  Object {
                    "id": "46",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/Alice.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Note",
                        },
                      ],
                    },
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Object {
                            "id": "53",
                            "isInternalLink": true,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Note",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Object {
                            "id": "54",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Alice",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/contains",
                        },
                        "values": Array [
                          Object {
                            "id": "55",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [
                                Object {
                                  "termType": "NamedNode",
                                  "value": "http://example.org/note/Alice.md",
                                },
                              ],
                              "types": Array [
                                Object {
                                  "termType": "NamedNode",
                                  "value": "http://pkm-united.org/Block",
                                },
                              ],
                            },
                            "rows": Array [
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                                },
                                "values": Array [
                                  Object {
                                    "id": "56",
                                    "isInternalLink": true,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "http://pkm-united.org/Block",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/name",
                                },
                                "values": Array [
                                  Object {
                                    "id": "57",
                                    "isInternalLink": true,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://pkm-united.org/selector",
                                },
                                "values": Array [
                                  Object {
                                    "id": "58",
                                    "isInternalLink": true,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/image",
                                },
                                "values": Array [
                                  Object {
                                    "id": "59",
                                    "isInternalLink": false,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
                                    },
                                  },
                                ],
                              },
                            ],
                            "term": Object {
                              "termType": "BlankNode",
                              "value": "n3-3",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Alice.md",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-2",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/WhiteRabbit.md",
    },
  },
  Object {
    "id": "60",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "quad",
        },
        "values": Array [
          Object {
            "id": "61",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "oh-my",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "shared",
    },
  },
  Object {
    "id": "62",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "63",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "loves to drink tea with",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
    },
  },
  Object {
    "id": "64",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/Something",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "65",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/Something",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/p",
        },
        "values": Array [
          Object {
            "id": "66",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/o",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/s",
    },
  },
]
`;

exports[`bfs extracts ex:Something first 1`] = `
Array [
  Object {
    "id": "1",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/Something",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "2",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/Something",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/p",
        },
        "values": Array [
          Object {
            "id": "3",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/o",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/s",
    },
  },
  Object {
    "id": "4",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Note",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "5",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "6",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "WhiteRabbit",
            },
          },
          Object {
            "id": "7",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
              },
              "language": "es",
              "termType": "Literal",
              "value": "Conejo blanco",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Object {
            "id": "8",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/WhiteRabbit.md",
                },
              ],
              "types": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/Block",
                },
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/Rabbit",
                },
              ],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Object {
                    "id": "9",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                  Object {
                    "id": "10",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/Rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "11",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Object {
                    "id": "12",
                    "isInternalLink": true,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Object {
                    "id": "13",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/contains",
                },
                "values": Array [
                  Object {
                    "id": "14",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Object {
                            "id": "17",
                            "isInternalLink": true,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Block",
                            },
                          },
                          Object {
                            "id": "18",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://schema.org/Place",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Object {
                            "id": "19",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/selector",
                        },
                        "values": Array [
                          Object {
                            "id": "20",
                            "isInternalLink": true,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/postalCode",
                        },
                        "values": Array [
                          Object {
                            "id": "21",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "4879",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/streetAddress",
                        },
                        "values": Array [
                          Object {
                            "id": "22",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "5 Wonderland Street",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b0_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/address",
                },
                "values": Array [
                  Object {
                    "id": "15",
                    "isInternalLink": true,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b0_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
                },
                "values": Array [
                  Object {
                    "id": "16",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/Alice.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Note",
                        },
                      ],
                    },
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Object {
                            "id": "23",
                            "isInternalLink": true,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Note",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Object {
                            "id": "24",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Alice",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/contains",
                        },
                        "values": Array [
                          Object {
                            "id": "25",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [
                                Object {
                                  "termType": "NamedNode",
                                  "value": "http://example.org/note/Alice.md",
                                },
                              ],
                              "types": Array [
                                Object {
                                  "termType": "NamedNode",
                                  "value": "http://pkm-united.org/Block",
                                },
                              ],
                            },
                            "rows": Array [
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                                },
                                "values": Array [
                                  Object {
                                    "id": "26",
                                    "isInternalLink": true,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "http://pkm-united.org/Block",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/name",
                                },
                                "values": Array [
                                  Object {
                                    "id": "27",
                                    "isInternalLink": true,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://pkm-united.org/selector",
                                },
                                "values": Array [
                                  Object {
                                    "id": "28",
                                    "isInternalLink": true,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/image",
                                },
                                "values": Array [
                                  Object {
                                    "id": "29",
                                    "isInternalLink": false,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
                                    },
                                  },
                                ],
                              },
                            ],
                            "term": Object {
                              "termType": "BlankNode",
                              "value": "n3-1",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Alice.md",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-0",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/WhiteRabbit.md",
    },
  },
  Object {
    "id": "30",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "quad",
        },
        "values": Array [
          Object {
            "id": "31",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "oh-my",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "shared",
    },
  },
  Object {
    "id": "32",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "33",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "loves to drink tea with",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
    },
  },
]
`;

exports[`bfs maxDepth = 2 1`] = `
Array [
  Object {
    "id": "67",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Note",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "68",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "69",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "WhiteRabbit",
            },
          },
          Object {
            "id": "70",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
              },
              "language": "es",
              "termType": "Literal",
              "value": "Conejo blanco",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Object {
            "id": "71",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/WhiteRabbit.md",
                },
              ],
              "types": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/Block",
                },
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/Rabbit",
                },
              ],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Object {
                    "id": "72",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                  Object {
                    "id": "73",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/Rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "74",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Object {
                    "id": "75",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Object {
                    "id": "76",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/contains",
                },
                "values": Array [
                  Object {
                    "id": "77",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b2_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/address",
                },
                "values": Array [
                  Object {
                    "id": "78",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b2_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
                },
                "values": Array [
                  Object {
                    "id": "79",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/Alice.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Note",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Alice.md",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-4",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/WhiteRabbit.md",
    },
  },
  Object {
    "id": "80",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Block",
        },
        Object {
          "termType": "NamedNode",
          "value": "http://schema.org/Place",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "81",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Block",
            },
          },
          Object {
            "id": "82",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://schema.org/Place",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "83",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Wozenderlands",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/selector",
        },
        "values": Array [
          Object {
            "id": "84",
            "isInternalLink": true,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Wozenderlands",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/postalCode",
        },
        "values": Array [
          Object {
            "id": "85",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "4879",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/streetAddress",
        },
        "values": Array [
          Object {
            "id": "86",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "5 Wonderland Street",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "BlankNode",
      "value": "b2_b4",
    },
  },
  Object {
    "id": "87",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "quad",
        },
        "values": Array [
          Object {
            "id": "88",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "oh-my",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "shared",
    },
  },
  Object {
    "id": "89",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Note",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "90",
            "isInternalLink": true,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "91",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Alice",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Object {
            "id": "92",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/Alice.md",
                },
              ],
              "types": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/Block",
                },
              ],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Object {
                    "id": "93",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "94",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Alice",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Object {
                    "id": "95",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Alice",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Object {
                    "id": "96",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-5",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/Alice.md",
    },
  },
  Object {
    "id": "97",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "98",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "loves to drink tea with",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
    },
  },
  Object {
    "id": "99",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/Something",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "100",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/Something",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/p",
        },
        "values": Array [
          Object {
            "id": "101",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/o",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/s",
    },
  },
]
`;
